--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,5 @@
 <% 
-    location = "Home"
+    location = t('home.title')
     unless @category.nil?
       location << ' / ' << @category.ident
     end
@@ -7,9 +7,9 @@
 %>
 
 <% if policy(HomepageMessage).new? %>
-  <a href="<%= homepage_messages_path %>">Manage messages</a>
+  <a href="<%= homepage_messages_path %>"><%= t('hmessages.manage_messages') %></a>
   &nbsp;&nbsp;&nbsp;
-  <a href="<%= homepage_messages_categories_path %>">Manage messages categories</a><br/><br/>
+  <a href="<%= homepage_messages_categories_path %>"><%= t('hmessages.manage_categories') %></a><br/><br/>
 <% end %>
 
 <div class="row"> 
@@ -20,10 +20,10 @@
       <h4 class="hl top-zero"><a href="<%= homepage_message_path(message) %>"><%= message.title %></a></h4>
       <ul class="text-muted list-inline">
         <li><i class="fa fa-folder-o"></i> <a href="<%= dashboard_path(message.homepage_messages_category.id) %>"><%= message.homepage_messages_category.ident %></a></li>
-				<li><i class="fa fa-user"></i> <a href="#">Administrator</a></li>
+				<li><i class="fa fa-user"></i> <a href="#"><%= t('administrator') %></a></li>
         <li><i class="fa fa-calendar"></i> <%= message.published_at.to_formatted_s(:news) %></li>
         <% if policy(message).edit? %>
-          <li><i class="fa fa-edit"></i> <%= link_to "Edit", edit_homepage_message_path(message), class: "text-muted" %></li>
+          <li><i class="fa fa-edit"></i> <%= link_to t('edit'), edit_homepage_message_path(message), class: "text-muted" %></li>
         <% end %>
 			</ul>
 			<hr/>
@@ -31,7 +31,7 @@
 				<%= raw(message.body) %>
 			</p>
 		<% else %>
-			No message.
+			<%= t('hmessages.no_message') %>
 		<% end %>
   </div>
   <br/>
@@ -40,7 +40,7 @@
   <div class="col-sm-4">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">Recently Added</h3>
+        <h3 class="panel-title"><%= t('hmessages.recently_added') %></h3>
       </div>
       <div class="panel-body">
         <div class="recent-blogs">        
@@ -60,7 +60,7 @@
       </div>
     </div>
 
-    <h3 class="hl">Categories</h3>
+    <h3 class="hl"><%= t('hmessages.categories') %></h3>
     <hr/>
     <p class="tags">
       <% @categories.each do |cat| %>
