--- a/app/views/dashboard/search/_news_item.html.erb
+++ b/app/views/dashboard/search/_news_item.html.erb
@@ -1,2 +1,2 @@
-<span class="label label-success search-label">News</span><h3><%= link_to object.title, news_path(object) %></h3>
+<span class="label label-success search-label"><%= t('news.one_news') %></span><h3><%= link_to object.title, news_path(object) %></h3>
 <p><%= object.summary %></p>
