--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,11 +12,11 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="<%= put_active_menu('homepage') %>"><a href="<%= root_path %>">Home</a></li>
-        <li class="<%= put_active_menu('news') %>"><a href="<%= news_index_path %>">News</a></li>
-        <li class="<%= put_active_menu('my_profile') %>"><a href="<%= feed_path %>">My profile</a></li>
+        <li class="<%= put_active_menu('homepage') %>"><a href="<%= root_path %>"><%= t('header.home') %></a></li>
+        <li class="<%= put_active_menu('news') %>"><a href="<%= news_index_path %>"><%= t('header.news') %></a></li>
+        <li class="<%= put_active_menu('my_profile') %>"><a href="<%= feed_path %>"><%= t('header.my_profile') %></a></li>
         <li class="dropdown <%= put_active_menu('specializations') %>">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specializations <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= t('header.specializations') %> <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <% @menu_specializations.each do |mspec| %>
                 <li><%= link_to mspec.name, group_feed_path(mspec.ident) %></a></li>
@@ -24,25 +24,25 @@
             </ul>
         </li>
         <li class="dropdown <%= put_active_menu('offers') %>">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Offers <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= t('header.offers') %> <b class="caret"></b></a>
             <ul class="dropdown-menu">
-	            <li><%= link_to t('selling'), offers_selling_path %></a></li>
-				      <li><%= link_to t('buying'), offers_buying_path %></li>
-				      <li><%= link_to t('rentals'), offers_rentals_path %></li>
+	            <li><%= link_to t('header.selling'), offers_selling_path %></a></li>
+				      <li><%= link_to t('header.buying'), offers_buying_path %></li>
+				      <li><%= link_to t('header.rentals'), offers_rentals_path %></li>
               <li class="divider"></li>
-              <li class="last"><%= link_to 'Blacklist', bad_customers_path %></li>
+              <li class="last"><%= link_to t('header.blacklist'), bad_customers_path %></li>
             </ul>
         </li>
-        <li class="<%= put_active_menu('jobs') %>"><a href="<%= jobs_path %>">Jobs</a></li>
-        <li class="<%= put_active_menu('suppliers') %>"><a href="<%= suppliers_path %>">Suppliers</a></li>
+        <li class="<%= put_active_menu('jobs') %>"><a href="<%= jobs_path %>"><%= t('header.jobs') %></a></li>
+        <li class="<%= put_active_menu('suppliers') %>"><a href="<%= suppliers_path %>"><%= t('header.suppliers') %></a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
         <li>
           <div class="country-select">
             <select name="countries" id="countrySelect" class="selectpicker">
-              <option value='int' data-content="<div class='flag int' /> International" <%= "selected" if current_country == 'int'%>>International</option>
-              <option value='ro' data-content="<div class='flag ro' /> Romania" <%= "selected" if current_country == 'ro'%>>Romania</option>
+              <option value='int' data-content="<div class='flag int' /> <%= t('header.international') %>" <%= "selected" if current_country == 'int'%>><%= t('header.international') %></option>
+              <option value='ro' data-content="<div class='flag ro' /> <%= t('header.romania') %>" <%= "selected" if current_country == 'ro'%>><%= t('header.romania') %></option>
             </select>
           </div>
         </li>
@@ -60,20 +60,20 @@
 				<div class="clearfix"></div>
 			</a>
 	     <ul class="dropdown-menu">
-				<li><%= link_to t('edit_profile'), edit_user_registration_path %></li>
+				<li><%= link_to t('header.edit_profile'), edit_user_registration_path %></li>
 				<li class="divider"></li>
-				<li><%= link_to t('sign_out'), destroy_user_session_path, method: :delete %></li>
+				<li><%= link_to t('header.sign_out'), destroy_user_session_path, method: :delete %></li>
 	        </ul>
         </li>
 
         <li id="search">
-          <a href="#" id="search-btn"><i class="fa fa-search" id="search-icon"></i> Search</a>
+          <a href="#" id="search-btn"><i class="fa fa-search" id="search-icon"></i> <%= t('header.search') %></a>
           <div class="search-box hidden" id="search-box">
             <form action="<%= search_path %>" method="GET">
               <div class="input-group">
-                <input type="text" class="form-control" name="query" placeholder="Search">
+                <input type="text" class="form-control" name="query" placeholder="<%= t('header.search') %>">
                 <span class="input-group-btn">
-                  <button class="btn btn-default" type="submit">Go!</button>
+                  <button class="btn btn-default" type="submit"><%= t('header.search') %></button>
                 </span>
               </div>
             </form>
@@ -89,11 +89,11 @@
 		<div class="container">
   		<div class="row">
   		  <div class="col-sm-10">
-  		    <h1 class="animated slideInLeft"><span><%= content_for?(:page_location) ? yield(:page_location) : "Home" %></span></h1>
+  		    <h1 class="animated slideInLeft"><span><%= content_for?(:page_location) ? yield(:page_location) : t('home.title') %></span></h1>
   		  </div>
         <div class="col-sm-2">
           <div class="bar-chat-toggle">
-            <a href="#" id="aShowChat"><i class="fa fa-comment-o" id="chat-icon"></i> Chat</a>
+            <a href="#" id="aShowChat"><i class="fa fa-comment-o" id="chat-icon"></i> <%= t('header.chat') %></a>
           </div>
         </div>
   		</div>
