--- a/app/views/bad_customers/show.html.erb
+++ b/app/views/bad_customers/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :page_location, "Blacklist" %>
+<% content_for :page_location, t('blacklist.title') %>
 
 <div class="row">
 	<div class="col-sm-12 customer-box">
@@ -7,12 +7,12 @@
 
     <div class="customer-links">
       <% if policy(@customer).edit? %>
-  			<%= link_to 'Edit', edit_bad_customer_path(@customer), class: 'btn btn-primary btn-sm' %>
+  			<%= link_to t('edit'), edit_bad_customer_path(@customer), class: 'btn btn-primary btn-sm' %>
       <% end %>
 		</div>
 
 		<div class="customer-info">
-			Added by <%= link_to @customer.user.full_name, user_path(@customer.user) %>
+			<%= t('added_by') %> <%= link_to @customer.user.full_name, user_path(@customer.user) %>
 		</div>
 
 		<div class="customer-message">
@@ -27,8 +27,8 @@
 			<%= f.error_notification %>
 			<div class="form-inputs">
 				<%= image_tag "/profile_pictures/#{current_user.profile_picture}" %>
-				<%= f.input :body, :required => true, label: 'Add Comment' %>
-				<%= f.button :submit, "Post", class: "btn btn-primary" %>
+				<%= f.input :body, :required => true, label: t('blacklist.add_comment') %>
+				<%= f.button :submit, t('post'), class: "btn btn-primary" %>
 			</div>
 		<% end %>
 		</div>
@@ -45,7 +45,7 @@
 				<div class="comment-body">
 					<span class="customer-item-time">
 						added on <i><%= comment.created_at.to_formatted_s(:date) %>
-						<%= link_to "Delete", bad_customer_bad_customer_comment_path(@customer,comment), method: :delete, :confirm => "Are you sure you want to delete this comment?", class: "btn btn-danger btn-xs" %>
+						<%= link_to t('delete'), bad_customer_bad_customer_comment_path(@customer,comment), method: :delete, :confirm => t('blacklist.comment_delete_confirmation') %>, class: "btn btn-danger btn-xs" %>
 					</span>
 					<p><%= comment.body %></p>
 				</div>
