--- a/app/views/dashboard/search.html.erb
+++ b/app/views/dashboard/search.html.erb
@@ -1,4 +1,4 @@
-<% content_for :page_location, "Search results" %>
+<% content_for :page_location, t('search.title') %>
 
 <div class="row search-results-container">
 	<div class="row">
@@ -6,15 +6,15 @@
 			<div class="">
 				<form action="<%= search_path %>" method="GET">
 			      <div class="input-group">
-			        <input type="text" class="form-control" name="query" placeholder="Search" value="<%= @query %>">
+			        <input type="text" class="form-control" name="query" placeholder="<%= t('search.search')%>" value="<%= @query %>">
 			        <span class="input-group-btn">
-			          <button class="btn btn-default" type="submit">Go!</button>
+			          <button class="btn btn-default" type="submit"><%= t('search.search')%></button>
 			        </span>
 			      </div>
 			    </form>
 			</div>
 			<br/>
-			<p>Search results for <strong><i><%= @query %></i></strong> (<%= @total_results %>):</p>
+			<p><%= t('search.search_results_for') %> <strong><i><%= @query %></i></strong> (<%= @total_results %>):</p>
 
 			<%= paginate @results %>
 			<div class="search-results">
@@ -27,7 +27,9 @@
 			<%= paginate @results %>
 		</div>
 		<div class="col-sm-4">
-			<p>Free space</p>
+			<p><%
+				# TODO: Free space
+			%></p>
 		</div>
 	</div>
 </div>
