--- a/app/views/homepage_messages/edit.html.erb
+++ b/app/views/homepage_messages/edit.html.erb
@@ -1,24 +1,24 @@
-<% content_for :page_location, "Homepage messages" %>
+<% content_for :page_location, t('hmessages.title') %>
 
 <div class="row">
 	<div class="col-sm-12">
-		<h3 class="hl">Edit message - <%= @message.title %></h3>
+		<h3 class="hl"><%= t('hmessages.edit_message') %> - <%= @message.title %></h3>
 		<hr>
 		<%= simple_form_for(@message, html: { role: "form", id: 'addMessageForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
 
 			<%= f.error_notification %>
 			<div class="form-inputs">
-				<%= f.input :title, :required => true, label: 'Title' %>
-        <%= f.association :homepage_messages_category, required: true, collection: HomepageMessagesCategory.where(deleted: false).order(ident: :asc), include_blank: false %>
-				<%= f.input :published_at, :as => :datetime_picker, :required => true, label: 'Publish at', :input_html => {:class => 'col-span-3 form-control'} %>
-				<%= f.input :website_country, collection: { 'International' => 'int', 'Romania' => 'ro', 'Germania' => 'de' }, include_blank: false %>
-				<%= f.input :body, :required => true, label: 'Content', as: :ckeditor %>
+				<%= f.input :title, :required => true, label: t('hmessages.label_title') %>
+        		<%= f.association :homepage_messages_category, required: true, label: t('hmessages.category'), collection: HomepageMessagesCategory.where(deleted: false).order(ident: :asc), include_blank: false %>
+				<%= f.input :published_at, :as => :datetime_picker, :required => true, label: t('publish_at'), :input_html => {:class => 'col-span-3 form-control'} %>
+				<%= f.input :website_country, label: t('hmessages.country'), collection: { 'International' => 'int', 'Romania' => 'ro' }, include_blank: false %>
+				<%= f.input :body, :required => true, label: t('hmessages.content'), as: :ckeditor %>
 			</div>
 
 			<br/>
-	        <%= f.button :submit, "Save", class: "btn btn-primary btn-dark" %>
-	        <%= link_to "Cancel", homepage_message_path(@message), class: "btn btn-warning" %>
-       		<%= link_to "Delete", homepage_message_path(@message), method: :delete, :confirm => "Are you sure you want to delete this news?", class: "btn btn-danger" %>
+	        <%= f.button :submit, t('save'), class: "btn btn-primary btn-dark" %>
+	        <%= link_to t('cancel'), homepage_message_path(@message), class: "btn btn-warning" %>
+       		<%= link_to t('delete'), homepage_message_path(@message), method: :delete, :confirm => t('hmessages.delete_confirmation'), class: "btn btn-danger" %>
 		<% end %>
 	</div>
 </div>
