--- a/app/views/homepage_messages/new.html.erb
+++ b/app/views/homepage_messages/new.html.erb
@@ -1,22 +1,22 @@
-<% content_for :page_location, "Homepage messages" %>
+<% content_for :page_location, t('hmessages.title') %>
 
 <div class="row">
 	<div class="col-sm-12">
-		<h3 class="hl">Add new message</h3>
+		<h3 class="hl"><%= t('hmessages.add_new_message')%></h3>
 		<hr>
 		<%= simple_form_for(@message, url: homepage_messages_path, html: { role: "form", id: 'addMessageForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
 
 			<%= f.error_notification %>
 			<div class="form-inputs">
-				<%= f.input :title, :required => true, label: 'Title' %>
-        <%= f.association :homepage_messages_category, required: true, collection: HomepageMessagesCategory.where(deleted: false).order(ident: :asc), include_blank: false %>
-				<%= f.input :published_at, :as => :datetime_picker, :required => true, label: 'Publish at', :input_html => {:class => 'col-span-3 form-control'} %>
-				<%= f.input :website_country, collection: { 'International' => 'int', 'Romania' => 'ro', 'Germania' => 'de' }, include_blank: false %>
-				<%= f.input :body, :required => true, label: 'Content', as: :ckeditor %>
+				<%= f.input :title, :required => true, label: t('hmessages.label_title') %>
+        		<%= f.association :homepage_messages_category, required: true, label: t('hmessages.category') collection: HomepageMessagesCategory.where(deleted: false).order(ident: :asc), include_blank: false %>
+				<%= f.input :published_at, :as => :datetime_picker, :required => true, label: t('published_at'), :input_html => {:class => 'col-span-3 form-control'} %>
+				<%= f.input :website_country, label: t('hmessages.country'), collection: { 'International' => 'int', 'Romania' => 'ro' }, include_blank: false %>
+				<%= f.input :body, :required => true, label: t('hmessages.content'), as: :ckeditor %>
 			</div>
 
 			<br/>
-	        <%= f.button :submit, "Post", class: "btn btn-primary btn-dark" %>
+	        <%= f.button :submit, t('post'), class: "btn btn-primary btn-dark" %>
 		<% end %>
 	</div>
 </div>
