--- a/app/views/homepage_messages_categories/index.html.erb
+++ b/app/views/homepage_messages_categories/index.html.erb
@@ -1,29 +1,29 @@
 <div class="row">
   <div class="col-sm-12 news-categories-box" ng-controller="HomepageMessagesCategoriesController">
-    <h2 class="h1 top-zero">Manage homepage messages categories</h2>
+    <h2 class="h1 top-zero"><%= t('hmessages.manage_categories') %></h2>
     <br/>
     <form role="form" class="form-inline">
       <div class="form-group">
-        <label for="categoryName" ng-show="selectedCategory.id">Edit {{ selectedCategory.oldIdent  }}:</label>
-        <label for="categoryName" ng-hide="selectedCategory.id">Add new category:</label>
+        <label for="categoryName" ng-show="selectedCategory.id"><%= t('edit') %> {{ selectedCategory.oldIdent }}:</label>
+        <label for="categoryName" ng-hide="selectedCategory.id"><%= t('hmessages.add_new_category') %>:</label>
         <input id="categoryName" class="form-control string required" value="{{ selectedCategory.ident }}" ng-model="selectedCategory.ident" />
       </div>
-      <button class="btn btn-green btn-sm" ng-click="saveCategory(selectedCategory)">Save</button>
-      <button ng-show="selectedCategory.id" class="btn btn-warning btn-sm" ng-click="cancelEdit()">Cancel</button>
+      <button class="btn btn-green btn-sm" ng-click="saveCategory(selectedCategory)"><%= t('save') %></button>
+      <button ng-show="selectedCategory.id" class="btn btn-warning btn-sm" ng-click="cancelEdit()"><%= t('cancel') %></button>
     </form>
     <br/>
-    <h3>Categories</h3>
+    <h3><%= t('hmessages.categories') %></h3>
     <table class="table table-striped table-condensed ">
       <thead>
-        <tr><th>Name</th><th>Messages count</th><th></th></tr>
+        <tr><th><%= t('hmessages.name') %></th><th><%= t('hmessages.messages_count') %></th><th></th></tr>
       </thead>
       <tbody>
       <tr ng-repeat="category in categories">
         <td>{{ category.ident }}</td>
         <td>{{ category.msgs_count }}</td>
         <td>
-          <a class="btn btn-primary btn-sm" href="#" ng-click="editCategory(category)">Edit</a>
-          <a class="btn btn-danger btn-sm" href="#" ng-click="deleteCategory(category)">Delete</a>
+          <a class="btn btn-primary btn-sm" href="#" ng-click="editCategory(category)"><%= t('edit') %></a>
+          <a class="btn btn-danger btn-sm" href="#" ng-click="deleteCategory(category)"><%= t('delete') %></a>
         </td>
       </tr>
       </tbody>
