--- a/app/views/layouts/landingpage2.html.erb
+++ b/app/views/layouts/landingpage2.html.erb
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
-    <title>Welcome to Dent Group</title>
-    <meta name="description" content="Dent Group">
+    <title><%= t('lp.html_title') %></title>
+    <meta name="description" content="<%= t('lp.html_description') %>">
 
     <link rel="apple-touch-icon-precomposed" href="/favicon-152.png">
     <link rel="icon" href="/favicon-152.png" sizes="152x152">
@@ -18,8 +18,8 @@
     <section id="home" class="full-screen">
       <div class="image-caption">
         <div class="inner">
-          <h2 class="bigtext strtoupper nomargin">Let's work together</h2>
-          <a class="btn btn-primary red nofill scrollTo" href="#about"><i class="fa fa-play"></i> ABOUT DENT GROUP</a>
+          <h2 class="bigtext strtoupper nomargin"><%= t('lp.texts.lets_work') %></h2>
+          <a class="btn btn-primary red nofill scrollTo" href="#about"><i class="fa fa-play"></i> <%= t('lp.texts.about') %></a>
         </div>
       </div>
 
@@ -27,12 +27,12 @@
 
       <% unless session[:reset_password_token].nil? %>
         <div class="forgot-password-cont collapse in" id="forgotPasswordContainer" ng-controller="UsersController" ng-init="forgotPassword.reset_password_token='<%= session[:reset_password_token] %>';">
-          <p>Change password</p>
+          <p><%= t('lp.pass.change_password') %></p>
           <%= simple_form_for(:user, html: { id: "forgotPasswordForm", role: "form" , 'ng-submit' => 'changePasswordReset()' }, url: '' ) do |f| %>
 
             <div class="form-inputs">
-              <%= f.input :password, :label => false, :required => true, :autofocus => true, placeholder: "New password", input_html: { 'ng-model' => 'forgotPassword.password' }, wrapper_html: { class: 'form-group', 'ng-class' => "{'has-error': reset_pass_errors.password}" } %>
-              <%= f.input :password_confirmation, label: false, :placeholder => "Confirm your new password", :required => true, input_html: { 'ng-model' => 'forgotPassword.password_confirmation' }, wrapper_html: { class: 'form-group', 'ng-class' => "{'has-error': reset_pass_errors.password_confirmation}" } %>
+              <%= f.input :password, :label => false, :required => true, :autofocus => true, placeholder: t('lp.pass.new_password'), input_html: { 'ng-model' => 'forgotPassword.password' }, wrapper_html: { class: 'form-group', 'ng-class' => "{'has-error': reset_pass_errors.password}" } %>
+              <%= f.input :password_confirmation, label: false, :placeholder => t('lp.pass.confirm_new_password'), :required => true, input_html: { 'ng-model' => 'forgotPassword.password_confirmation' }, wrapper_html: { class: 'form-group', 'ng-class' => "{'has-error': reset_pass_errors.password_confirmation}" } %>
 
               <div class="errors-container" ng-show="reset_pass_errors.password || reset_pass_errors.password_confirmation">
                 <p class="text-danger" ng-repeat="err in reset_pass_errors.password">{{err}}</p>
@@ -41,8 +41,8 @@
             </div>
 
             <div class="form-actions">
-              <%= f.button :submit, 'Save', class: "btn btn-success btn-lg" %>
-              <a class="btn btn-warning" data-toggle="collapse" data-target="#forgotPasswordContainer" ng-click="cancelResetPassword()">Cancel</a>
+              <%= f.button :submit, t('save'), class: "btn btn-success btn-lg" %>
+              <a class="btn btn-warning" data-toggle="collapse" data-target="#forgotPasswordContainer" ng-click="cancelResetPassword()"><%= t('cancel') %></a>
             </div>
           <% end %>
         </div>
@@ -51,21 +51,21 @@
       <div class="signup collapse" ng-class="{'in': newUser.currentStep == 2}" id="signupContainer" ng-controller="UsersController">
         <input type="hidden" ng-init="newUser.currentStep=<%= current_user.nil? ? 1: 2 %>;" value="<%= current_user.nil? ? 1 : 2 %>" />
         <div id="reg-step-1" ng-show="newUser.currentStep == 1">
-          <p><%= t('sign_up') %></p>
+          <p><%= t('lp.signup.sign_up') %></p>
           <%= simple_form_for(:user, html: { id: "signupForm", role: "form", 'ng-submit' => 'signUp()'}, url: '' ) do |f| %>
             <div class="form-inputs">
-              <%= f.input :fname, :required => false, label: false, placeholder: t('first_name'), input_html: { class: "form-control", 'ng-model' => "newUser.fname" }, wrapper_html: { class: 'form-group', 'ng-class' => "{'has-error': register_errors.fname}" } %>
-              <%= f.input :lname, :required => false, label: false, placeholder: t('last_name'), input_html: { class: "form-control", 'ng-model' => "newUser.lname" }, wrapper_html: { class: 'form-group', 'ng-class' => "{'has-error': register_errors.lname}" } %>
+              <%= f.input :fname, :required => false, label: false, placeholder: t('lp.signup.first_name'), input_html: { class: "form-control", 'ng-model' => "newUser.fname" }, wrapper_html: { class: 'form-group', 'ng-class' => "{'has-error': register_errors.fname}" } %>
+              <%= f.input :lname, :required => false, label: false, placeholder: t('lp.signup.last_name'), input_html: { class: "form-control", 'ng-model' => "newUser.lname" }, wrapper_html: { class: 'form-group', 'ng-class' => "{'has-error': register_errors.lname}" } %>
               <div class="errors-container" ng-show="register_errors.fname || register_errors.lname">
-                <p class="text-danger"><%= t('signup_names_error') %></p>
+                <p class="text-danger"><%= t('lp.signup.signup_names_error') %></p>
               </div>
               
-              <%= f.input :email, :required => false, label: false, placeholder: t('your_email'), input_html: { class: "form-control", 'ng-model' => "newUser.email" }, wrapper_html: { class: 'form-group', 'ng-class' => "{'has-error': register_errors.email}" } %>
+              <%= f.input :email, :required => false, label: false, placeholder: t('lp.signup.your_email'), input_html: { class: "form-control", 'ng-model' => "newUser.email" }, wrapper_html: { class: 'form-group', 'ng-class' => "{'has-error': register_errors.email}" } %>
               <div class="errors-container" ng-show="register_errors.email">
                 <p class="text-danger">E-mail address {{register_errors.email[0]}}</p>
               </div>
 
-              <%= f.input :password, :required => false, label: false, placeholder: t('password'), input_html: { class: "form-control", 'ng-model' => "newUser.password" }, wrapper_html: { class: 'form-group', 'ng-class' => "{'has-error': register_errors.password}" } %>
+              <%= f.input :password, :required => false, label: false, placeholder: t('lp.signup.password'), input_html: { class: "form-control", 'ng-model' => "newUser.password" }, wrapper_html: { class: 'form-group', 'ng-class' => "{'has-error': register_errors.password}" } %>
               <div class="errors-container" ng-show="register_errors.password">
                 <p class="text-danger" ng-repeat="err in register_errors.password">{{err}}</p>
               </div>
@@ -76,7 +76,7 @@
             %>
 
             <div class="form-actions">
-              <%= f.button :submit, t('sign_up'), class: "btn btn-success btn-lg" %>
+              <%= f.button :submit, t('lp.signup.sign_up'), class: "btn btn-success btn-lg" %>
             </div>
           <% end %>
         </div>
@@ -93,11 +93,10 @@
         %>
         <% unless current_user.nil? %>
           <div id="reg-step-2" ng-show="newUser.currentStep == 2">
-            <p>E-mail confirmation required</p>
-            We sent you an e-mail to <%= current_user.email %> containing instructions on how to confirm your e-mail address.<br/>
-            If you did not receive the e-mail click the button below to resend it.
+            <p><%= t('lp.emailconf.required') %></p>
+            <%= raw t('lp.emailconf.description', email: current_user.email) %>
             <center>
-              <button class="btn btn-success" ng-click="resendEmail('<%= current_user.email %>')">Resend e-mail</button>
+              <button class="btn btn-success" ng-click="resendEmail('<%= current_user.email %>')"><%= t('lp.emailconf.resend_email') %></button>
             </center>
           </div>
         <% end %>
@@ -127,22 +126,22 @@
                 <div class="signin" ng-controller="UsersController">
                    <%= simple_form_for(:user, url: '', html: { id: "signinForm", role: "form" } ) do |f| %>
                     <div class="form-inputs">
-                      <%= f.input :email, :required => false, label: false, placeholder: t('your_email'), input_html: { class: "form-control", 'ng-model' => "user.email" }, wrapper_html: { class: 'form-group' } %>
-                      <%= f.input :password, :required => false, label: false, placeholder: t('password'), input_html: { class: "form-control", 'ng-model' => "user.password" }, wrapper_html: { class: 'form-group' } %>
-                      <%= f.button :submit, t('sign_in'), class: "btn btn-primary btn-xs", 'ng-click' => 'signIn()' %>
-                      <button class="btn btn-primary btn-red btn-xs scrollTo" href="#home" data-toggle="collapse" data-target="#signupContainer">Create account</button>
+                      <%= f.input :email, :required => false, label: false, placeholder: t('lp.navi.your_email'), input_html: { class: "form-control", 'ng-model' => "user.email" }, wrapper_html: { class: 'form-group' } %>
+                      <%= f.input :password, :required => false, label: false, placeholder: t('lp.navi.password'), input_html: { class: "form-control", 'ng-model' => "user.password" }, wrapper_html: { class: 'form-group' } %>
+                      <%= f.button :submit, t('lp.navi.sign_in'), class: "btn btn-primary btn-xs", 'ng-click' => 'signIn()' %>
+                      <button class="btn btn-primary btn-red btn-xs scrollTo" href="#home" data-toggle="collapse" data-target="#signupContainer"><%= t('lp.navi.create_account') %></button>
                     </div>
                     <div class="login-additional">
                       <% if devise_mapping.rememberable? %>
                         <div class="checkbox-inline remember-me">
                           <label>
                             <input type="checkbox" value="" ng-model="user.remember_me">
-                            <%= t('remember_me') %>
+                            <%= t('lp.navi.remember_me') %>
                           </label>
                         </div>
                       <% end %>
                         <div class="forgot-password">
-                          <a href="#" ng-click="sendResetPassword()"><%= t('forgot_password') %></a>
+                          <a href="#" ng-click="sendResetPassword()"><%= t('lp.navi.forgot_password') %></a>
                         </div>
                     </div>
                   <% end %>
@@ -157,64 +156,48 @@
     <section id="about">
       <div class="container full-screen">
         <div class="row title-row">
-          <div class="col-12 font-thin"><%= image_tag('logo.png', alt: "logo", title: "Dent Group", class: "logo") %> <span class="font-semibold">connects</span> you with your colleagues from <span class="font-semibold">everywhere around the world.</span></div>
+          <div class="col-12 font-thin"><%= raw t('lp.texts.connects_big', logo_image: image_tag('logo.png', alt: "logo", title: "Dent Group", class: "logo")) %></div>
         </div>
         <div class="row line-row">
           <div class="hr">&nbsp;</div>
         </div>
         <div class="row subtitle-row">
-          <div class="col-12 font-thin">This is what <span class="font-semibold">we can offer you</span></div>
+          <div class="col-12 font-thin"><%= raw t('lp.texts.we_can_offer') %></div>
         </div>
         <div class="row content-row">
           <div class="tt ttconnect col-12 col-lg-3 col-sm-6" data-toggle="tooltip" data-placement="top" title="title">
             <p><i class="fa fa-globe"></i></p>
-            <h2 class="font-semibold">Connect</h2>
-            <h4 class="font-thin">Dent Group pune bazele unei noi conexiuni intre medicii stomatologi din intreaga lume in deplina intimitate.</h4>
+            <h2 class="font-semibold"><%= t('lp.texts.connect') %></h2>
+            <h4 class="font-thin"><%= t('lp.texts.connect_desc') %></h4>
           </div>
           <div class="tt ttshare col-12 col-lg-3 col-sm-6" data-toggle="tooltip" data-placement="top" title="title">
             <p><i class="fa fa-share-square-o"></i></p>
-            <h2 class="font-semibold">Share</h2>
-            <h4 class="font-thin">Aveti posibilitatea de a impartasi idei si opinii personale care pot fi citite si luate in considerare de ceilalti medici membrii utilizatori ai site-ului.</h4>
+            <h2 class="font-semibold"><%= t('lp.texts.share') %></h2>
+            <h4 class="font-thin"><%= t('lp.texts.share_desc') %></h4>
           </div>
           <div class="tt ttdiscuss col-12 col-lg-3 col-sm-6" data-toggle="tooltip" data-placement="top" title="title">
             <p><i class="fa fa-users"></i></p>
-            <h2 class="font-semibold">Discuss</h2>
-            <h4 class="font-thin">Primul si singurul site online dedicat medicilor stomatologi care poate fi folosit pentru a comunica cat mai eficient.</h4>
+            <h2 class="font-semibold"><%= t('lp.texts.discuss') %></h2>
+            <h4 class="font-thin"><%= t('lp.texts.discuss_desc') %></h4>
           </div>
           <div class="tt ttmore col-12 col-lg-3 col-sm-6" data-toggle="tooltip" data-placement="top" title="title">
             <p><i class="fa fa-pencil-square-o"></i></p>
-            <h2 class="font-semibold">A lot more</h2>
-            <h4 class="font-thin">Utilizarea site-ului Dent Group este la indemana fiecarui medic stomatolog, si are ca obiectiv, stabilirea bazelor unui sistem relational pentru a imbunatati calitativ deciziile membrilor acestui grup online.</h4>
+            <h2 class="font-semibold"><%= t('lp.texts.a_lot_more') %></h2>
+            <h4 class="font-thin"><%= t('lp.texts.a_lot_more_desc') %></h4>
           </div>
 
           <div class="tts">
             <div id="ttconnect">
-              <p><span class="red bold">Dent Group</span> pune bazele unei noi conexiuni avand ca scop asigurarea unei comunicari, organizari si sistematizari a cunostintelor in domeniul stomatologiei.</p>
-               
-              <p>Site-ul online <span class="red bold">Dent Group</span> are ca viziune munca in echipa, conturata sub forma unui site cu circuit inchis, ca raspuns la necesitatile de comunicare pentru medicii stomatologi din intreaga lume.</p>
-               
-              <p><span class="red bold">Dent Group</span> se concentreaza asupra formarii unei comunitati la scara cat mai larga, pentru a construi o unitate relationala de maxima receptivitate pentru toti medicii stomatoligi, ce poate fi inteleasa prin optimizarea comunicarii online intre acestia, prioritara fiind incurajarea creativitatii, enuntarea unor idei, a unor opinii originale din partea membrilor acestui site.</p>
+              <%= raw t('lp.texts.connect_tooltip') %>
             </div>
             <div id="ttshare">
-              <p>Accesand site-ul online <span class="red bold">Dent Group</span> aveti posibilitatea de a impartasi idei si opinii personale care pot fi citite si luate in considerare de ceilalti medici membrii utilizatori ai site-ului.</p>
-
-              <p>Astfel vi se ofera sansa de a posta fotografii dar si experiente placute sau neplacute din timpul operatiilor sau lucrarilor dentare, care pot fi folosite sub forma de indrumare profesionala pentru toti medicii stomatologi.</p>
+              <%= raw t('lp.texts.share_tooltip') %>
             </div>
             <div id="ttdiscuss">
-              <p>O Comunicare eficienta este cheia increderii intre medicii stomatologi, un principiu solid in stabilirea unei unitati functionale facilitand accesul la informatii in tratamentul dentar oferit pacientilor.</p>
-
-              <p><span class="red bold">Dent Group</span> este site-ul care te ajuta sa comunici si sa stabilesti relatii de colegialitate eficiente si de durata cu medici aflati atat pe plan national cat si pe plan international.</p>
-
-              <p>World Wide Networking - un concept pe care acest site il dezvolta pentru a pune in contact practicantii acestei meserii, locul unde ideile si informatiile se concentreaza, pentru a fi "livrate" ulterior celor ce sunt interesati.</p>
-
-              <p>Site-ul are un caracter de circuit inchis putend fi accesat doar de medicii stomatologi membrii activi ai acestui site.</p>
+              <%= raw t('lp.texts.discuss_tooltip') %>
             </div>
             <div id="ttmore">
-              <p><span class="red bold">Dent Group</span> incurajeaza in permanenta preocuparea pentru ridicarea continuă a pregătirii profesionale şi dăruirea la locul de muncă. Relaţiile de cooperare faciliteaza solutionarea rapida a unor probleme care apar spontan sau periodic si pot avea rezultate pozitive in planul creşterii operativităţii profesionale sau eficientizarii volumului de munca depus.</p>
-
-              <p>Veti avea acces la stiri, informatii despre furnizori si vanzari, cumparari si inchirieri de echipamente, chat, angajari, rau-platnici - totul pentru un abonament lunar in valoare de numai 7 euro.</p>
-
-              <p class="bold">Inregistrati-va acum si veti avea prima luna gratuita.</p>
+              <%= raw t('lp.texts.a_lot_more_tooltip') %>
             </div>
           </div>
         </div>
@@ -227,7 +210,7 @@
         <div class="row">
           <div class="col-md-6 copyright">
             Dent Group<br />
-            2014 &copy; All Rights Reserved.
+            <%= Time.now.year %> &copy; <%= raw t('lp.texts.all_rights_reserved') %>
           </div>
 
           <div class="col-md-6 text-right">
