--- a/app/views/news/edit.html.erb
+++ b/app/views/news/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-sm-12 news-box">
-		<h2 class="hl top-zero">Edit news - <%= @news.title %></h2>
+		<h2 class="hl top-zero"><%= t('edit') %> - <%= @news.title %></h2>
 		<hr/>
 
 		<%= simple_form_for(@news, html: { role: "form", id: 'addNewsForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
