--- a/app/views/shared/_feed_status_comments.html.erb
+++ b/app/views/shared/_feed_status_comments.html.erb
@@ -11,7 +11,7 @@
 			<span class="timestamp"><i class="fa fa-clock-o"></i> <%= time_ago_in_words(comment.created_at) %></span>
 			<% if current_user?(comment.user) %>
 				&nbsp;&nbsp;<span class="timestamp"><i class="fa fa-trash-o"></i> 
-				<%= link_to "Delete", status_status_comment_path(subject, comment), method: :delete, :confirm => "Are you sure you want to delete this comment?", class: "btn-remove-comment text-muted" %>
+				<%= link_to t('delete'), status_status_comment_path(subject, comment), method: :delete, :confirm => t('status.comment_delete_confirmation'), class: "btn-remove-comment text-muted" %>
 				</span>
 			<% end %>
 		</div>
