--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -1,12 +1,12 @@
-<% content_for :page_location, "Suppliers" %>
+<% content_for :page_location, t('suppliers.title') %>
 
 <div class="row">
 	<div class="col-sm-12 suppliers-box">
-		<h2 class="hl top-zero">Suppliers</h2>
+		<h2 class="hl top-zero"><%= t('suppliers.title') %></h2>
 		<hr/>
 
     <% if policy(Supplier).new? %>
-      <%= link_to 'Add new supplier', new_supplier_path %>
+      <%= link_to t('suppliers.add_new_supplier'), new_supplier_path %>
     <% end %>
 		<br/>
 
@@ -24,8 +24,8 @@
 						<% end %>
 						<div class="supplier-details">
 							<a href="<%= supplier_path(@country,supplier) %>"><h4><%= supplier.name %></h4></a>
-							<p class="supplier-item-location"><span class="supplier-item-location"><%= supplier.name %></span> in <span class="supplier-item-location"><%= "#{supplier.city}, #{supplier.country}" %></span></p>
-							<span class="supplier-item-time">Posted on <i><%= supplier.created_at.to_formatted_s(:date) %></i> by <%= link_to supplier.user.full_name, user_path(supplier.user) %></span>
+							<p class="supplier-item-location"><span class="supplier-item-location"><%= supplier.name %></span> <%= t('in') %> <span class="supplier-item-location"><%= "#{supplier.city}, #{supplier.country}" %></span></p>
+							<span class="supplier-item-time"><%= t('posted_on') %> <i><%= supplier.created_at.to_formatted_s(:date) %></i> <%= t('by') %> <%= link_to supplier.user.full_name, user_path(supplier.user) %></span>
 						</div>
 					</div>
 				<% end %>
@@ -41,8 +41,8 @@
 						<% end %>
 						<div class="supplier-details">
 							<a href="<%= supplier_path(@country,supplier) %>"><h4><%= supplier.name %></h4></a>
-							<p class="supplier-item-location"><span class="supplier-item-location"><%= supplier.name %></span> in <span class="supplier-item-location"><%= "#{supplier.city}, #{supplier.country}" %></span></p>
-							<span class="supplier-item-time">Posted on <i><%= supplier.created_at.to_formatted_s(:date) %></i> by <%= link_to supplier.user.full_name, user_path(supplier.user) %></span>
+							<p class="supplier-item-location"><span class="supplier-item-location"><%= supplier.name %></span> <%= t('in') %> <span class="supplier-item-location"><%= "#{supplier.city}, #{supplier.country}" %></span></p>
+							<span class="supplier-item-time"><%= t('posted_on') %> <i><%= supplier.created_at.to_formatted_s(:date) %></i> <%= t('by') %> <%= link_to supplier.user.full_name, user_path(supplier.user) %></span>
 						</div>
 					</div>
 				<% end %>
